# discord-callsign-bot

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  QUICKSTART.md  README.md  config.example.toml  config.toml.example  discord-callsign-bot.service  run.sh
.github/workflows/: ci.yml  release.yml
docs/plans/: 2026-01-06-github-api-output-design.md  2026-01-06-github-api-output-impl.md
scripts/: install-git-hooks.sh  pre-commit
src/: config.rs  github.rs  main.rs  output.rs  parser.rs  qrz.rs
