[package]
name = "discord-callsign-bot"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "cache"] }
tokio = { version = "1.40", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
regex = "1.10"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
qrz-xml = { version = "0.1", default-features = false, features = ["rustls-tls"] }

[[bin]]
name = "discord-callsign-bot"
path = "src/main.rs"
